--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,20 +11,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install Flutter
-      run: git clone https://github.com/flutter/flutter.git
 
-    # PATH を通す
-    - name: Add path
-      run: echo "$(pwd)/flutter/bin" >> $GITHUB_PATH
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable' 
 
-    # パッケージのダウンロード
-    - name: Download Flutter packages
-      run: flutter pub get
-      - run: flutter build web
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build web app
+        run: flutter build web
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEMOAPP_99357 }}
           channelId: live
           projectId: demoapp-99357
+          entryPoint: build/web # Flutter Web アプリのビルド成果物があるディレクトリを指定
