--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,19 +14,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Flutter
-      run: git clone https://github.com/flutter/flutter.git
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable' 
 
-    # PATH を通す
-    - name: Add path
-      run: echo "$(pwd)/flutter/bin" >> $GITHUB_PATH
+      - name: Install dependencies
+        run: flutter pub get
 
-    # パッケージのダウンロード
-    - name: Download Flutter packages
-      run: flutter pub get
-      - run: flutter build web
+      - name: Build web app
+        run: flutter build web
+
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DEMOAPP_99357 }}
           projectId: demoapp-99357
+          entryPoint: build/web
+          expires: 30d # プレビュー環境の有効期限を設定 (例: 30日間)
+          previews: true # プレビュー環境を有効にする
